--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 server.port=8085
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tram.ensaa@gmail.com
+spring.mail.password=hotmail.co14
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
